--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,5 @@
-/* No CSS *//*# sourceMappingURL=App.css.map */
+#routes-container {
+  margin-top: 10vh;
+  height: 90vh;
+}
+/*# sourceMappingURL=App.css.map */
