--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -21,8 +21,10 @@
   z-index: 1;
 }
 
-.nav-container #permian {
+.nav-container .permian {
   color: #0A0708;
+  font-size: 40px;
+  font-weight: normal;
 }
 
 .nav-container .logout-button {
@@ -47,7 +49,7 @@
 }
 
 .nav-container .welcome-box {
-  width: 50vw;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,7 +77,7 @@
 }
 
 .nav-container ul {
-  width: 16vw;
+  width: 15vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,6 +111,51 @@
   outline: none;
   background: #C62828;
   text-shadow: 0px 0px 10px white;
+}
+
+.guestLanding-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100vw;
+  height: 100%;
+  font-family: "Exo", sans-serif;
+  text-decoration: none;
+}
+
+.anchor-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 20vw;
+  height: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  font-size: 15px;
 }
 
 @media screen and (max-width: 1080px) {
@@ -213,7 +260,7 @@
 }
 
 @media screen and (max-width: 420px) {
-  .nav-container h1 {
+  .permian {
     font-size: 30px;
   }
 }
