--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	background: #0A0708;
+	color: white;
 }
 ol, ul {
 	list-style: none;
