--- a/src/styles/AddService/AddService.css
+++ b/src/styles/AddService/AddService.css
@@ -57,6 +57,7 @@ h2:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #0A0708;
   font-family: "Exo", sans-serif;
 }
 
@@ -415,7 +416,7 @@ h2:hover {
 @media screen and (max-width: 385px) {
   div.service-description {
     width: 40vw;
-    height: 90vh;
+    height: 25vh;
     font-size: 20px;
   }
   .service-description-title {
