--- a/src/styles/HomePage/HomePage.css
+++ b/src/styles/HomePage/HomePage.css
@@ -57,6 +57,7 @@ h2:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #0A0708;
   font-family: "Exo", sans-serif;
 }
 
