--- a/src/styles/HomePage/HomePage.scss
+++ b/src/styles/HomePage/HomePage.scss
@@ -32,6 +32,7 @@ h2:hover {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    color: $ebony;
     font-family: $web-font;
 };
 
