--- a/src/styles/Service/Service.css
+++ b/src/styles/Service/Service.css
@@ -20,6 +20,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #0A0708;
   font-family: "Exo", sans-serif;
 }
 
