--- a/src/styles/Service/Service.scss
+++ b/src/styles/Service/Service.scss
@@ -14,6 +14,7 @@
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    color: $ebony;
     font-family: $web-font;
         .services-title h1 {
             height: 10vh;
