--- a/src/styles/UserProfilePage/UserProfilePage.css
+++ b/src/styles/UserProfilePage/UserProfilePage.css
@@ -92,14 +92,18 @@
     font-size: 30px;
   }
   .profile-information {
-    height: 60vh;
+    height: 50vh;
   }
   .profile-information .profile-information h3 {
     font-size: 1px;
   }
-  .profile-information .profile-buttons button {
+  .profile-information .profile-buttons {
+    width: 60vw;
     height: 20px;
     font-size: 12px;
+  }
+  .profile-information .profile-buttons button {
+    width: 22vw;
   }
 }
 
